fix: topbar z-index

--- a/src/components/TopBar/style.scss
+++ b/src/components/TopBar/style.scss
@@ -1,6 +1,6 @@
 .zpl-topbar-container {
   /* Default */
-  @apply bg-surface px-md py-xs flex items-center justify-between top-0 sticky z-30;
+  @apply bg-surface px-md py-xs flex items-center justify-between top-0 sticky z-[31];
   box-shadow: inset 0px -1px 0px rgba(0, 0, 0, 0.08);
   @apply dark:bg-surface-dark dark:text-text-dark;
 }
